theme: personalized content

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,13 +67,23 @@
   <a href="https://github.com/{{ site.github.username }}" target="_blank">
     <i class="fab fa-github-alt"></i>
   </a>
-  <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank">
-    <i class="fab fa-twitter"></i>
+  <a href="https://instagram.com/{{ site.instagram.username }}" target="_blank">
+    <i class="fab fa-instagram"></i>
   </a>
+  <a href="https://linkedin.com/in/{{ site.linkedin.username }}" target="_blank">
+    <i class="fab fa-linkedin"></i>
+  </a>
+  <a href="https://t.me/{{ site.telegram.username }}" target="_blank">
+    <i class="fab fa-telegram"></i>
+  </a>
+
+<!--
   {% assign email = site.social.email | split: '@' %}
-  <a href="javascript:window.open('mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@'))">
-    <i class="fas fa-envelope"></i>
+  <a href="https://t.me/savagezen">
+    <i class="fab fa-telegram"></i>
   </a>
+-->
+
   <a href="{{ site.baseurl }}/feed.xml" target="_blank">
     <i class="fas fa-rss"></i>
   </a>
